--- a/bin/ui/pane-to-search.fxml
+++ b/bin/ui/pane-to-search.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView fx:id="tableAllDevices2" layoutX="335.0" layoutY="40.0" prefHeight="423.0" prefWidth="317.0">
@@ -23,12 +22,12 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="txtSearch" layoutX="132.0" layoutY="36.0" />
-      <Label layoutX="31.0" layoutY="40.0" text="Search a device" />
-      <TableView fx:id="tableAllDevices21" layoutX="35.0" layoutY="138.0" prefHeight="290.0" prefWidth="224.0">
+      <TextField fx:id="txtSearch" layoutX="35.0" layoutY="40.0" promptText="serial number" />
+      <Label layoutX="35.0" layoutY="17.0" text="Search a device" />
+      <TableView fx:id="tableAdyacents2" layoutX="35.0" layoutY="138.0" prefHeight="290.0" prefWidth="224.0">
          <columns>
-            <TableColumn fx:id="columnSerials31" prefWidth="122.0" text="Adyacent devices" />
-            <TableColumn fx:id="columnFloor1" prefWidth="101.0" text="Ping" />
+            <TableColumn fx:id="columnSerialsAdy" prefWidth="122.0" text="Adyacent devices" />
+            <TableColumn fx:id="columnPing2" prefWidth="101.0" text="Ping" />
          </columns>
       </TableView>
       <Label layoutX="47.0" layoutY="79.0" text="Device:" />
@@ -38,5 +37,6 @@
       <Label layoutX="172.0" layoutY="109.0" text="Floor: " />
       <Label fx:id="labFloor" layoutX="205.0" layoutY="105.0" prefHeight="25.0" prefWidth="38.0" />
       <Button layoutX="113.0" layoutY="438.0" mnemonicParsing="false" onAction="#removeDevice" text="Remove" />
+      <Button layoutX="198.0" layoutY="40.0" mnemonicParsing="false" onAction="#searchComputer" text="Search" />
    </children>
 </Pane>
